--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
     <!-- Categories -->
     <h2>Categories</h2>
-    <div class="container cardsdiv">
-      <div class="row mb-3">
+    <div class="container">
+      <div class="row mb-3 rowDiv">
     
         <div class="col-xxl-2 col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card cards">
@@ -187,180 +187,180 @@
     <div class="container BigCardDiv1" id="">
       <div class="row mb-4">
 
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard1 bigCardSet">
-            <a href=""><img src="big cards pic/pict (9).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (9).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Apple Iphone 16 Pro Max - 6.9" Inch Display ( Non PTA) - 1 Year Official Warranty</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard2 bigCardSet">
-            <img src="big cards pic/pict (8).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (8).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Samsung Galaxy A15 with 3 high-quality cameras 8GB RAM + 256 ROM</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard3 bigCardSet">
-            <img src="big cards pic/pict (10).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (10).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Samsung Galaxy Tab A7 Lite - 8.7" Inch Display - SIM - 3GB RAM - 32GB ROM</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard4 bigCardSet">
-            <img src="big cards pic/pict (14).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (14).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">TWS I12 Super Quality & i7s Airpods with Super Sound & High Quality Touch Sensors</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard5 bigCardSet">
-            <img src="big cards pic/pict (15).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (15).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard6 bigCardSet0">
-            <img src="big cards pic/pict (23).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (23).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard7 bigCardSet">
-            <img src="big cards pic/pict (5).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (5).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard8 bigCardSet">
-            <img src="big cards pic/pict (24).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (24).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard9 bigCardSet">
-            <img src="big cards pic/pict (11).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (11).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard10 bigCardSet">
-            <img src="big cards pic/pict (12).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (12).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard11 bigCardSet">
-            <img src="big cards pic/pict (18).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (18).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard12 bigCardSet">
-            <img src="big cards pic/pict (13).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (13).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard13 bigCardSet">
-            <img src="big cards pic/pict (22).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (22).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard14 bigCardSet">
-            <img src="big cards pic/pict (4).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (4).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard15 bigCardSet">
-            <img src="big cards pic/pict (7).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (7).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard16 bigCardSet">
-            <img src="big cards pic/pict (1).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (1).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard17 bigCardSet">
-            <img src="big cards pic/pict (2).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (2).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard18 bigCardSet">
-            <img src="big cards pic/pict (16).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (16).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard619 bigCardSet">
-            <img src="big cards pic/pict (17).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (17).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
             </div>
           </div>
         </div>
-        <div class="col-xxl-3">
+        <div class="col-xxl- col-xl-3 col-lg-3 col-md-4 col-sm-4">
           <div class="card bigcard20  bigCardSet">
-            <img src="big cards pic/pict (3).png" class="card-img-top"></a>
+            <a href="#"><img src="big cards pic/pict (3).png" class="card-img-top"></a>
             <div class="card-body">
               <p class="card-text bigCardText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum alias est</p>
               <h5 class="card-title Cardrup">Rs. 1000</h5>
